Fix loop nav spacing

--- a/nickpale/static/nickpale/master.css
+++ b/nickpale/static/nickpale/master.css
@@ -71,9 +71,6 @@ h1 {
   grid-template-columns: 25% 25% 25% 25%;
   text-align: center;
 }
-.loop .loop-nav a {
-  width: 50%;
-}
 .loop .loop-nav .first-loop {
   grid-column-start: 1;
   grid-column-end: 2;
